[fix] fixed swagger ui and added documentation
